syntax = "proto3";

package user_profile;

service UserProfile {
  rpc GetProfile(ProfileRequest) returns (ProfileResponse);
  rpc UpdateProfile(ProfileUpdateRequest) returns (ProfileUpdateResponse);
}
message ProfileRequest { string token = 1; }

message ProfileResponse {
  string email = 1;
  string last_name = 2;
  string full_name = 3;
  repeated string roles = 4;
}

message ProfileUpdateRequest {
  string token = 1;
  string email = 2;
  string full_name = 3;
}

message ProfileUpdateResponse {
  string message = 1;
  bool success = 2;
}
